@startuml
'skinparam monochrome true
'skinparam shadowing false

title UC012 - List all vaccines

class Administrator {
    +Username: String [PK]
    +Password: String
}

class Vaccine {
    +ID: Int [PK]
    +Name: String
    +Brand: String
    +Type: VaccineType [FK]
}

class Order {
    +  grouped by type
    +  listed alphabetically by name
}

class VaccineType {
     +ID: Int [pk]
     +Name: String
     +Brand: String [FK]
}

' Relationships
Administrator "1" -- "1" Vaccine : lists >
Vaccine "1" -- "1" Order : grouped by >
Vaccine "1" -- "1" VaccineType : is of >
@enduml
